# ChangeLog for www-client/luakit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/luakit/ChangeLog,v 1.29 2012/06/30 13:05:47 radhermit Exp $

*luakit-2012.03.25 (30 Jun 2012)

  30 Jun 2012; Tim Harder <radhermit@gentoo.org> +luakit-2012.03.25.ebuild,
  luakit-9999.ebuild:
  Version bump (bug #410729) and update live ebuild. Update to EAPI 4, respect
  CFLAGS, respect CC, and use vcs-snapshot eclass to unpack release tarballs.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> luakit-2010.12.25_p2.ebuild,
  luakit-2011.04.13.ebuild, luakit-2011.04.13_p1.ebuild,
  luakit-2011.07.22.ebuild, luakit-2011.07.22_p1.ebuild, luakit-9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  21 Sep 2011; Michał Górny <mgorny@gentoo.org> luakit-9999.ebuild:
  Migrate to git-2, fix github hack to PMS-compliant one.

*luakit-2011.07.22_p1 (27 Jul 2011)

  27 Jul 2011; Alex Alexander <wired@gentoo.org> +luakit-2011.07.22_p1.ebuild:
  version bump

*luakit-2011.07.22 (22 Jul 2011)

  22 Jul 2011; Alex Alexander <wired@gentoo.org> +luakit-2011.07.22.ebuild:
  version bump

  30 Jun 2011; Alex Alexander <wired@gentoo.org> luakit-9999.ebuild:
  added new dependency, libunique. bug #372221

*luakit-2011.04.13_p1 (15 Apr 2011)

  15 Apr 2011; Alex Alexander <wired@gentoo.org> +luakit-2011.04.13_p1.ebuild:
  version bump

  14 Apr 2011; Alex Alexander <wired@gentoo.org> -luakit-2010.09.24.ebuild,
  -luakit-2010.12.25-r1.ebuild, -luakit-2011.04.04.ebuild:
  old version cleanup

*luakit-2011.04.13 (13 Apr 2011)

  13 Apr 2011; Alex Alexander <wired@gentoo.org> +luakit-2011.04.13.ebuild:
  version bump

*luakit-2011.04.04 (04 Apr 2011)

  04 Apr 2011; Alex Alexander <wired@gentoo.org> +luakit-2011.04.04.ebuild:
  version bump

  21 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  luakit-2010.09.24.ebuild, luakit-2010.12.25-r1.ebuild,
  luakit-2010.12.25_p2.ebuild, luakit-9999.ebuild:
  Fix slot-deps on gnome libs
