@@ -1,30 +1,32 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-AUX luakit-2010.12.25-fix-deprecated.patch 775 RMD160 4d004ee05b999ec643fd91ddadbe5d5e9663bd68 SHA1 fe06891532f738d438516c2ea12f453f4676471c SHA256 110cde6753f47584ff6886ce81716aa13a38dbeaba20bd47fcfa6e11b51fe750
-DIST luakit-2010.12.25_p2.tar.gz 111053 RMD160 a25124781da35b86e542cbb852527bf48e949bfd SHA1 b0d458b1a5d0d9af80439b046641199ff067686a SHA256 6dec13f42eb0ce9bd0d66dfa6d795b305c95e4924cc440a3b693530d46a4bf74
-DIST luakit-2011.04.13.tar.gz 132971 RMD160 88b5101d72491d2f77b53b13ffc7979910ad924b SHA1 7177c4c93426b88bb13079bcb841b6988059dc45 SHA256 ed5897dec67877c6dc2e3b00e0b1b37b860fd932e90b0686268cdfbd310a47e3
-DIST luakit-2011.04.13_p1.tar.gz 133072 RMD160 e745a61c21af2dd51eee4d80553ddb7bb4eda164 SHA1 8bbb8047b2affc79a315e248ded9256631094d10 SHA256 ad3142e2a1cfd49cefaf03a93e88795f897f20f760c574fbcadcbeef6fd625fc
-DIST luakit-2011.07.22.tar.gz 148709 RMD160 e776dcbad8d201380627ad485002e938fb7290ae SHA1 d8d58cecc61768d856a071feb9549887d45406cd SHA256 8ba45dadac8e2088b8f0b24a90c51d196166f737f7ed94dee11689cf595d25b9
-DIST luakit-2011.07.22_p1.tar.gz 148704 RMD160 806a4150084b302da8030e60f9811675fe6a9e29 SHA1 255f055825cd6bcc1298505f2d3c36a809820a06 SHA256 8a0d5ce7657de5dde270a691911b26822cb3259b8bf5a0fcf6c02f7748ad4a3d
-DIST luakit-2012.03.25.tar.gz 155220 RMD160 2da3313588ca392455bd9f92c3e197ca5f2d068a SHA1 6b1b4e1d37d95d28953cfb60b0b676b7fb08ad5d SHA256 7e3eda0c4cf64e9674da3821494cb99028483e628133fa9f48f65bd316643074
-EBUILD luakit-2010.12.25_p2.ebuild 1836 RMD160 fbbdb19606b88db1707cf9f04ef36d8b9da9a2de SHA1 8ec9dfc0dd7af123fbc71a663c98c8298a392aaf SHA256 ddcd62daec5012429a38d4067da0f32738594cf4a45eb090447bf634c235f13b
-EBUILD luakit-2011.04.13.ebuild 1864 RMD160 3699963f35c6f35498bb7827d8385a719f7a400f SHA1 bf750d0acfb69a58c6a76b74464c1d54349739d3 SHA256 c893544ab0a2e2816cdfdb4187f84dddc658ed49bc520db018be4f475316c2d0
-EBUILD luakit-2011.04.13_p1.ebuild 1867 RMD160 0b8eb14459116712e3301259f9080d7b956fd3f1 SHA1 e92bfbeb1f5848e73a08623f7f22a30513a92785 SHA256 cb4db4f3bcce6318fd1a02fe7d3f55e7986684e409937593dcca4142132cf946
-EBUILD luakit-2011.07.22.ebuild 1886 RMD160 9619d9141382ad526f30a4b666f6dcdc8c477eab SHA1 1bd065e6a00272866d38d5bbb72583cefe5ce34f SHA256 4e7f5b9e702ddffad0bfc4f72e10f975cb5d1c620d17fc6249353a0bbd1b68c7
-EBUILD luakit-2011.07.22_p1.ebuild 1889 RMD160 27be25e9f41b94ef0bea4fb79ff770014812967d SHA1 5b387c9739ec65be957c569002ffc401ab9b6ba8 SHA256 4a50090a3a36c9d47dd1b214987a4015d5ecdc5a09f2723f24b701f835fcfa57
-EBUILD luakit-2012.03.25.ebuild 1694 RMD160 7af46bd1eb2da3ec9439b80453e953db5ad9e3bc SHA1 ebf46a2bdafdeb25e4503a49f698aae47af977e0 SHA256 4fd6ecbf72e8d5571a7684540b82534c9cb462302bf93118210753b2c0dcf419
-EBUILD luakit-9999.ebuild 1689 RMD160 8f1ae5f233ff7e49488f677594bbdca9a55877a3 SHA1 40c8941cc0e6cdafcc8b3e132dda66b14fcf2cf5 SHA256 8bb59692e78853876efd0d5a881df285c3216e694ab5c2daf10fb2ea3fdc9ee4
-MISC ChangeLog 4896 RMD160 4e52bdeb8993dbd9903fc83d77012a0a96acaa7a SHA1 9ba222643f94989ef56b11ac7c4e05b63712764b SHA256 828b4ac2ef77845b419209f66e667ea9acd0d15537ed7423fcde18813f0ef7d6
-MISC metadata.xml 470 RMD160 6d0339a035f678710865434032c180be3f88de44 SHA1 19c8b06f9798581e185ea18a819b89c7f06d2255 SHA256 45b2e4ffe7283973d6f9e8bb0b4575478510b8aaaa6a8102b21ca92ec89aaef5
+AUX luakit-2010.12.25-fix-deprecated.patch 775 SHA256 110cde6753f47584ff6886ce81716aa13a38dbeaba20bd47fcfa6e11b51fe750 SHA512 5e30640a5d3ce041a4641e198721217e1d441be841091c6d562d7251934e16f9fbf8ac8d2ff97286c332907a12628152a979ba6a0402af7a63ca5f33d6551e8b WHIRLPOOL 1083db7ea3bb2d3b103d2d4051957fda74117efcaa8817a411218f1340236d166360075f0e96b9476c75043da86414c8c68a257cfe3a2f4ed4b05c914090ab50
+DIST luakit-2010.12.25_p2.tar.gz 111053 SHA256 6dec13f42eb0ce9bd0d66dfa6d795b305c95e4924cc440a3b693530d46a4bf74
+DIST luakit-2011.04.13.tar.gz 132971 SHA256 ed5897dec67877c6dc2e3b00e0b1b37b860fd932e90b0686268cdfbd310a47e3
+DIST luakit-2011.04.13_p1.tar.gz 133072 SHA256 ad3142e2a1cfd49cefaf03a93e88795f897f20f760c574fbcadcbeef6fd625fc
+DIST luakit-2011.07.22.tar.gz 148709 SHA256 8ba45dadac8e2088b8f0b24a90c51d196166f737f7ed94dee11689cf595d25b9
+DIST luakit-2011.07.22_p1.tar.gz 148704 SHA256 8a0d5ce7657de5dde270a691911b26822cb3259b8bf5a0fcf6c02f7748ad4a3d
+DIST luakit-2012.03.25.tar.gz 155220 SHA256 7e3eda0c4cf64e9674da3821494cb99028483e628133fa9f48f65bd316643074 SHA512 69f0105d4838eb87b581325d7a232372d1b452265e924ab59c660309d91580d3671ac98ffc1372e8d976901140302152bb71d1aa887236ee1de219d66b31ffe4 WHIRLPOOL dec8e2a766d0be3f62fbc22582531ace1cc10aa35d2546ab1e273b7bf45ab4c6b445a4a92a1879e4d40415feec976f3e5bf320b22000ef3693e21e373d18f4da
+DIST luakit-2012.09.13_p1.tar.gz 215431 SHA256 688950fda11f032976998b52ba6505fc1bf5bba40552293f9ddc748b00f76132 SHA512 429f2911e6c0e28966579721925d3f9bf492461b3f43cecb07df5f2a7ee5e791d30885c50039da6849ec8d16e8b042286482966c036089e87c568fb394aade09 WHIRLPOOL de90607402cc13eab7a84a3f9f75edaca976f444aabccd1391f7c7f20fe0211d78d8d4c3d3685bcabb84622556617411c9778eaf6abb23ca826992c4914f0064
+EBUILD luakit-2010.12.25_p2.ebuild 1836 SHA256 ddcd62daec5012429a38d4067da0f32738594cf4a45eb090447bf634c235f13b SHA512 be5c97c4cae7a853c69193751253bcfcc6cfd757adf6c4a8aec18984204fe0d0d6e60c81074425b5ecb8e984d1ebc816bec91796b955a1c49d13ddf81bb0ea3d WHIRLPOOL 8d61ad463d28106f97b52a14d30a8554bda0d0eba0605a8d2d114a8685c891a7f154dd625d6e4e89d89e8ef7a40815088113523c517ad6fa98f72a43014ffefc
+EBUILD luakit-2011.04.13.ebuild 1864 SHA256 c893544ab0a2e2816cdfdb4187f84dddc658ed49bc520db018be4f475316c2d0 SHA512 bb6d3b223d2ca8cc6209ed3135834d21d1a14f8dc63a5f220e5443f1b6645e9f9e4b5a95a061f9f76d143fc56c8250ca6e0420b96f06ebfb5bda00ba172e4ab1 WHIRLPOOL c6bf8735f9d2203ab03acbfa5f3b266a70098a7a5483a1f0652fce2357f619c34dbead14a13611ee3471e9d5e0158d1964f66467b4387c5326fc9579fe050e38
+EBUILD luakit-2011.04.13_p1.ebuild 1867 SHA256 cb4db4f3bcce6318fd1a02fe7d3f55e7986684e409937593dcca4142132cf946 SHA512 f4cca69142c639c5f80d1f703987347c6b32cb349bbd18193c1279864a9613f11ae103c4075fc6448d2cd0d7c7c507837bf83b31976d0c3dfaa7395d437f5e39 WHIRLPOOL b9348dd7ce82fab260f5d5e186da4171f1548de7c5a115ff7e95cbad9d2500a9a3f0248ed285a20e4a81c92916309260680cc04fbb651db6a893081e3632f6db
+EBUILD luakit-2011.07.22.ebuild 1886 SHA256 4e7f5b9e702ddffad0bfc4f72e10f975cb5d1c620d17fc6249353a0bbd1b68c7 SHA512 d74e60963c7d5ca38724a38aaf9a9c710c6b6f8566c81cecc7d957200a3b6352b5c4bb34d1c85e5c44baa21c89d38ba27df15ffdc68260b5c4e878fc70e6a7bb WHIRLPOOL da327a1c5f4b315750d16c61e6e710b23ef9ec5f519693efdc46bfb61a85e2d9a72c4b140b4e7e5a855d849934052a1c92a934332b3652002046b26dd3e3ca5b
+EBUILD luakit-2011.07.22_p1.ebuild 1889 SHA256 4a50090a3a36c9d47dd1b214987a4015d5ecdc5a09f2723f24b701f835fcfa57 SHA512 653cbb43f58233287a6979d51a52ff6f471fe95c39692e5bf61c6f86f6baf89e3916cb18cadb3e09fef7a90d2126bf64e573ac56da21444d3b12a95144e4799d WHIRLPOOL 23d6571026f16e73c6dbc6dd576bc270573f755857c617734432eec1db95b5015385512ef7e1420b801ecc92caf20d7fa24f6854b233bf3b486c9e6e0ff8c6b0
+EBUILD luakit-2012.03.25.ebuild 1694 SHA256 4fd6ecbf72e8d5571a7684540b82534c9cb462302bf93118210753b2c0dcf419 SHA512 8bac14618f236788c02658c670a39157c49d9622dce912b51caaa705909215081ebe65107312104895623e19d8cb327c9432def6cab349704540333da1b0f91f WHIRLPOOL 7870ec22e0238e19962731a43301d8e943a852403cce9d047d6a50fb69bdfd42d9deb0d68c8cdb8ca437d2d3d3579b3cb688bd7f7fd810c321fda3eb3eb1c6d0
+EBUILD luakit-2012.09.13_p1.ebuild 1697 SHA256 7dfb7d568136072c1eb524d30583776cf8bafc751304b74b99ffb0d46f6644ad SHA512 b33a4bcaffbee5c9b91792e32355e6e2765820be7930f12030e83c47fc8adee7ffe3de2595111b4085c1b18ff5b2ea2eb7f0df285ce3273c4d302d18bb6de22f WHIRLPOOL 4c8ff03164dc30eff791fc38ee1882323fabc6c0d4181d570b2f0531eae07580f54c3238380b634865478f90d861fc8052ce90ba2afb4132d08d4e7c0ddd4a5d
+EBUILD luakit-9999.ebuild 1689 SHA256 8bb59692e78853876efd0d5a881df285c3216e694ab5c2daf10fb2ea3fdc9ee4 SHA512 65a7e269a27ce999755258ea0d23572c145fe633a2f6ad313b05551070746d81f62350955936c4c11f9bbaebd7682862cd925a6edac72f7ff6e73efe50408b69 WHIRLPOOL 6a428c82eacb6e8f6d338e97f27bda5e795ea18c189aa5bb2988f26356aec0f1c4ed31d05f4227d0024bcfd0b776879ee91ee06361b1594171dec87c464fa2b2
+MISC ChangeLog 5029 SHA256 80c8177d5577b11c73478c210981722fc66797d2352a1381b7898e0bf886cfa0 SHA512 96b41a859edf844a8e95509b05e02197b49f512d62051f1c3f8cc986a7f5af235cdab1858b3e815f85ba7c2e3f40fd12caa6d1c10c71a712dc83417950104331 WHIRLPOOL 6ce1143aae189c669ff06bb4bab1bb4bfdc2942503866b91b22aab85754c01ff134b19f2fb3bac52eb20352886a5a9c3544fbfee1ec48e4358650fed909082ad
+MISC metadata.xml 470 SHA256 45b2e4ffe7283973d6f9e8bb0b4575478510b8aaaa6a8102b21ca92ec89aaef5 SHA512 69cb289060685123200b2c63b264ab5a1a1293dc85c3077c2375be0734d77973e66ed5768e52a2f0b6f3e0f674441440650f6ac9e027e621d59a65040552e1ca WHIRLPOOL 58ec2921c82a549974cd26e7b46b699162ef28add580c96593c16d16286bde75362f7d2f41251bf2b7a49f09b15485a322ac861d037d5f65477c3a304c955ba3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJP7vmyAAoJEEqz6FtPBkyjFr8H/1O5k07Re03chkzaDcCpfCMS
-QXgna3jm8T/pOvE65rfTSPCtXwikr9SCfzJIvourjsOEovOfy6ThdCI6XrvYS46E
-iQtomZuFDE8ZEd1cvYPbN6pQOyv8QKdWU91vPJqYUKuAVOOcJz01vG4vBZIeaXv0
-9RD6I8LYIQ7RcKQUQ18DT7Q4ynPmXqggKFzCcYEZxzpQ7UeiPadTVFiEa0h9RCdD
-LaWVj3wVt54Yfm+QVwr1ZP+1GhTHQ2VY1EWQIWW0DJFTIUVJg5QSv+KCFBSBYgXD
-+1HBpgRxrerS7uvlnGKqwFVdKl2NJ6NOKxZ/1++dsfFb7yhBELo7uJNYWAzcCNs=
-=1uPN
+iQEcBAEBCAAGBQJQVDGzAAoJEEqz6FtPBkyjWDsH/34iKf3WRrS6z+DgLOHE1kly
+3hgtTNZSzXF85vmF2YGqFs5evB1x2rHDAJAXU4Pwj2S81EOxQDcAsD/7x6c2vLEq
+HzQNoyakw5npN7WvtbaHfavdhUnINODSKybYcHb7kcd4Kg588ENLX8wh1+1lBM6f
+sz4vRkzcMS/8iOqQiQYIQ5zO5z9viGrsHVGYACnyYoPH5gUO0C1L1wvlucXaicXY
+Uti9I7QQNuu9m2eqbh1egXF+90sUNef34dvVgiCsW6LE0rH34UYFmW/O+PXBXZyZ
+H+cyP4m7mQRrzEtYHsLHLFj22pWdULA37jv9kUixOJSenDyixuXdL0BKKXLj9kE=
+=0D5n
 -----END PGP SIGNATURE-----
