@@ -1,6 +1,11 @@
 # ChangeLog for www-client/luakit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/luakit/ChangeLog,v 1.29 2012/06/30 13:05:47 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/luakit/ChangeLog,v 1.30 2012/09/15 07:43:41 radhermit Exp $
+
+*luakit-2012.09.13_p1 (15 Sep 2012)
+
+  15 Sep 2012; Tim Harder <radhermit@gentoo.org> +luakit-2012.09.13_p1.ebuild:
+  Version bump.
 
 *luakit-2012.03.25 (30 Jun 2012)
 
